--- a/views/create-conflict.html
+++ b/views/create-conflict.html
@@ -1,6 +1,17 @@
+<script type="text/template" id="diffs-overview-template">
+
+</script>
+
 <script type="text/template" id="create-conflict-template">
-    <form>
+    <form id="create-conflict-form">
         <textarea></textarea>
-        <a href="#" class="btn btn-primary submit">Submit</a>
+
+        <div id="submit-box">
+            <div class="bubble">
+                Well done! Are you ready to continue?
+                <div class="tip"></div>
+            </div>
+            <a href="#" class="submit">Yeah! Let's do this!</a>
+        </div>
     </form>
 </script>
