--- a/views/index.jade
+++ b/views/index.jade
@@ -1,9 +1,8 @@
 extends layout
 
 block content
-    .container
-        .row-fluid
-            #content
+    #header wickedawesome
+    #content
 
     include create-conflict.html
     include diff-templates.html
