--- a/views/create-conflict.html
+++ b/views/create-conflict.html
@@ -1,13 +1,9 @@
-<script type="text/template" id="diffs-overview-template">
-
-</script>
-
 <script type="text/template" id="create-conflict-template">
     <form id="create-conflict-form">
         <textarea></textarea>
 
         <div id="submit-box">
-            <div class="bubble">
+            <div class="continue-bubble">
                 Well done! Are you ready to continue?
                 <div class="tip"></div>
             </div>
