--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,8 @@
 extends layout
 
 block content
-    #header wickedawesome
+    #header
+        a(href="/') wickedawesome
     #content
 
     include create-conflict.html
