--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5238,6 +5238,45 @@ body {
 .diff .source .code-wrap {
   overflow-x: auto;
 }
+.diff .select-diff-bubble {
+  background-color: #1b3944;
+  color: #fff;
+  padding: 18px 12px 0;
+  font-size: 22px;
+  width: 176px;
+  text-align: center;
+  margin: 15px;
+  word-wrap: break-word;
+  margin-left: 14%;
+  top: 72px;
+  position: fixed;
+  z-index: 10;
+  width: 300px;
+}
+.diff .select-diff-bubble a {
+  color: inherit;
+}
+.diff .select-diff-bubble .tip {
+  position: relative;
+  bottom: -20px;
+  width: 0;
+  height: 0;
+  border-left: 26px solid transparent;
+  border-right: 14px solid transparent;
+  border-top: 20px solid #1b3944;
+  left: 50%;
+}
+.diff .select-diff-bubble a {
+  color: #fff;
+}
+.diff .select-diff-side {
+  display: inline-block;
+  background-color: #1b3944;
+  padding: 6px 18px;
+  color: #fff;
+  margin: 15px;
+  font-size: 18px;
+}
 #header {
   text-transform: uppercase;
   font-size: 40px;
@@ -5248,9 +5287,8 @@ body {
   position: relative;
   padding-bottom: 30px;
 }
-#create-conflict-form textarea,
-#create-conflict-form #diffs-overview {
-  position: absolute;
+#create-conflict-form textarea {
+  position: relative;
   top: 0;
   left: 0;
   z-index: 2;
@@ -5262,22 +5300,25 @@ body {
 }
 #submit-box {
   position: fixed;
-  width: 100%;
   z-index: 20;
   top: 0;
-  left: 0;
+  right: 0;
 }
-#submit-box .bubble {
+#submit-box .continue-bubble {
   background-color: #00cc3e;
   color: #fff;
   padding: 18px 12px 0;
   font-size: 22px;
   width: 176px;
   text-align: center;
-  float: right;
   margin: 15px;
+  word-wrap: break-word;
+  float: right;
 }
-#submit-box .bubble .tip {
+#submit-box .continue-bubble a {
+  color: inherit;
+}
+#submit-box .continue-bubble .tip {
   position: relative;
   bottom: -20px;
   width: 0;
@@ -5295,4 +5336,46 @@ body {
   font-size: 18px;
   float: right;
   clear: right;
+}
+.syntaxhighlighter {
+  max-height: 450px;
+}
+#left .syntaxhighlighter {
+  background-color: #1b3944 !important;
+}
+#right .syntaxhighlighter {
+  background-color: #222 !important;
+}
+#right .select-diff-bubble {
+  background-color: #222;
+}
+#right .select-diff-bubble .tip {
+  border-top-color: #222;
+}
+#resolved .click-to-copy-bubble {
+  background-color: #00cc3e;
+  color: #fff;
+  padding: 18px 12px 0;
+  font-size: 22px;
+  width: 176px;
+  text-align: center;
+  margin: 15px;
+  word-wrap: break-word;
+  position: fixed;
+  margin-left: 70%;
+  z-index: 10;
+  top: 35px;
+}
+#resolved .click-to-copy-bubble a {
+  color: inherit;
+}
+#resolved .click-to-copy-bubble .tip {
+  position: relative;
+  bottom: -20px;
+  width: 0;
+  height: 0;
+  border-left: 26px solid transparent;
+  border-right: 14px solid transparent;
+  border-top: 20px solid #00cc3e;
+  left: 50%;
 }
