last round of updates for first round of testing, name is now unconflict.me

--- a/public/stylesheets/less/style.less
+++ b/public/stylesheets/less/style.less
@@ -4,6 +4,8 @@
 
 body{
     padding:30px 60px;
+    font-family: 'Oswald', sans-serif;
+    font-weight:300;
 }
 
 .bubble(@color:#00cc3e){
@@ -11,10 +13,11 @@ body{
     color:#fff;
     padding:18px 12px 0;
     font-size:22px;
-    width:176px;
+    width:136px;
     text-align:center;
     margin:15px;
     word-wrap:break-word;
+    line-height:28px;
 
     a{
         color:inherit;
@@ -67,6 +70,10 @@ body{
     font-size:40px;
     line-height:normal;
     width:100%;
+
+    h1{
+        font-weight:normal;
+    }
 }
 
 #content{
