--- a/views/diff-templates.html
+++ b/views/diff-templates.html
@@ -47,6 +47,6 @@
             <div class="tip"></div>
         </div>
         <pre id="resolved-content" class="brush: xml"><%=merged_output%></pre>
-        <div style="display:none;" id="template-for-copy"><%=merged_output%></div>
+        <textarea style="display:none;" id="template-for-copy"><%=merged_output%></textarea>
     </div>
 </script>
