--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,8 @@ extends layout
 
 block content
     #header
-        a(href="/') wickedawesome
+        h1
+            a(href="/") unconflict.me
     #content
 
     include create-conflict.html
