--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype 5
 html
   head
     title= title
+    link(href='http://fonts.googleapis.com/css?family=Oswald:300', rel='stylesheet', type='text/css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(type="text/javascript", src="/javascripts/min/main.min.js")
   body
