cursor:pointer and min-height added to diff source divs

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5345,7 +5345,8 @@ body {
   clear: right;
 }
 .syntaxhighlighter {
-  max-height: 450px;
+  height: 450px;
+  cursor: pointer;
 }
 #left .syntaxhighlighter {
   background-color: #1b3944 !important;
