background and h1 colors

--- a/public/stylesheets/less/style.less
+++ b/public/stylesheets/less/style.less
@@ -6,6 +6,7 @@ body{
     padding:30px 60px;
     font-family: 'Oswald', sans-serif;
     font-weight:300;
+    background-color:#f8f8f8;
 }
 
 .bubble(@color:#00cc3e){
@@ -73,6 +74,11 @@ body{
 
     h1{
         font-weight:normal;
+        color:#e5e5e5;
+
+        a, a:hover, a:visited{
+            color:inherit;
+        }
     }
 }
 
