--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5236,6 +5236,7 @@ body {
   padding: 30px 60px;
   font-family: 'Oswald', sans-serif;
   font-weight: 300;
+  background-color: #f8f8f8;
 }
 .diff .source .code-wrap {
   overflow-x: auto;
@@ -5288,6 +5289,12 @@ body {
 }
 #header h1 {
   font-weight: normal;
+  color: #e5e5e5;
+}
+#header h1 a,
+#header h1 a:hover,
+#header h1 a:visited {
+  color: inherit;
 }
 #content {
   position: relative;
