added select language to UI, not hooked up yet

--- a/public/stylesheets/less/style.less
+++ b/public/stylesheets/less/style.less
@@ -179,3 +179,33 @@ body{
         top:35px;
     }
 }
+
+#language-select{
+    .btn, a{
+        border-color:#d8d8d8;
+        color:#d8d8d8;
+        font-family:inherit;
+        text-transform:uppercase;
+        background:none;
+        background-color:#fff;
+        font-size:17px;
+    }
+
+    a:hover{
+        background-color:#fafafa;
+    }
+
+    span.arrow-down{
+        position:relative;
+        top:17px;
+        width: 0;
+        height: 0;
+        border-left: 7px solid transparent;
+        border-right: 7px solid transparent;
+        border-top: 7px solid #d8d8d8;
+    }
+
+    .open > .dropdown-menu{
+        width:100%;
+    }
+}
