--- a/views/create-conflict.html
+++ b/views/create-conflict.html
@@ -4,10 +4,11 @@
 
         <div id="submit-box">
             <div class="continue-bubble">
-                Well done! Are you ready to continue?
+                Nice! Not bad lookin' code.
+
+                <a href="#" class="submit">Continue</a>
                 <div class="tip"></div>
             </div>
-            <a href="#" class="submit">Yeah! Let's do this!</a>
         </div>
     </form>
 </script>
