updating the final click to copy to be like the new step1 continue

--- a/public/stylesheets/less/style.less
+++ b/public/stylesheets/less/style.less
@@ -189,9 +189,23 @@ body{
     .click-to-copy-bubble{
         .bubble;
         position:fixed;
-        margin-left:70%;
         z-index:10;
-        top:35px;
+        top:90px;
+        right:35px;
+        text-align:left;
+        padding:5px 10px;
+        background-color:#1570a6;
+
+        .tip{
+            float:right;
+            bottom:-33px;
+            border-right-width:10px;
+            border-top-width:10px;
+            border-top-color:#222;
+            border-left-width:0;
+            margin-right:-10px;
+            left:0;
+        }
     }
 }
 
