added file input, auto detection of langauge from filename, hiding language select after first step and some underscore updates (deep breath)

--- a/public/stylesheets/less/style.less
+++ b/public/stylesheets/less/style.less
@@ -99,12 +99,19 @@ body{
         width:99%;
         margin-bottom:30px;
     }
+
+    input[type="file"]{
+        border:1px solid #d8d8d8;
+        background-color:#fff;
+        padding:2px 8px;
+        margin:10px 0 20px;
+    }
 }
 
 #submit-box{
     position:fixed;
     z-index:20;
-    top:85px;
+    top:152px;
     right:35px;
 
     .continue-bubble{
@@ -198,7 +205,7 @@ body{
 
         .tip{
             float:right;
-            bottom:-33px;
+            bottom:-15px;
             border-right-width:10px;
             border-top-width:10px;
             border-top-color:#222;
@@ -206,10 +213,24 @@ body{
             margin-right:-10px;
             left:0;
         }
+
+        .submit{
+            padding:2px 18px;
+            color:#fff;
+            margin:10px 0 0;
+            font-size:18px;
+            display:block;
+            text-align:center;
+            background-color:#22bb54;
+            border:1px solid #36da6b;
+        }
     }
 }
 
 #language-select{
+    position:relative;
+    top:66px;
+
     .btn, a{
         border-color:#d8d8d8;
         color:#d8d8d8;
@@ -245,6 +266,33 @@ body{
         a{
             padding:4px 14px;
             width:210px;
+        }
+    }
+}
+
+.tooltip{
+    font-size:24px;
+    line-height:28px;
+
+    .tooltip-inner{
+        background-color:#22BB54;
+    }
+
+    &.right{
+        .tooltip-arrow{
+            border-right-color:#22BB54;
+        }
+    }
+
+    &.error{
+        .tooltip-inner{
+            background-color:#ff0000;
+        }
+
+        &.right{
+            .tooltip-arrow{
+                border-right-color:#ff0000;
+            }
         }
     }
 }
