--- a/views/create-conflict.html
+++ b/views/create-conflict.html
@@ -1,5 +1,6 @@
 <script type="text/template" id="create-conflict-template">
-    <form id="create-conflict-form">
+    <form id="create-conflict-form" enctype="multipart/form-data">
+        <input type="file" name="conflicted_file" id="conflicted-file" />
         <textarea></textarea>
 
         <div id="submit-box">
