--- a/views/diff-templates.html
+++ b/views/diff-templates.html
@@ -43,7 +43,8 @@
 <script type="text/template" id="resolved-merge-template">
     <div id="resolved">
         <div class="click-to-copy-bubble">
-            <a href="#" id="click-to-copy">Click to Copy</a>
+            Your file has been successfully un-conflicted!
+            <a href="#" id="click-to-copy" class="submit">Click to Copy</a>
             <div class="tip"></div>
         </div>
         <pre id="resolved-content" class="brush: <%=conflict.get('language')%>"><%=merged_output%></pre>
